--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Sobre - Pedro</title>
 </head>
 
@@ -27,14 +29,24 @@
             <h1>Olá, eu sou Pedro</h1>
             <h3>Desenvolvedor Back-End</h3>
             <p>Sou estudante de Técnico em Desenvolvimento de Sistemas, com 17 anos e residente em Salvador - BA. Tenho
-                uma
-                sólida base em linguagens de programação como C, Java e PHP. Estou sempre em busca de novos desafios e
+                uma sólida base em linguagens de programação como C, Java e PHP. Estou sempre em busca de novos desafios
+                e
                 oportunidades para aplicar e desenvolver minhas habilidades.</p>
             <div class="btn-box">
                 <a href="#footer">Entre em Contato</a>
+                <div class="email-icons">
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=pedruuu291@gmail.com" class="gmail"
+                        target="_blank"><i class="fab fa-google"></i></a>
+                    <a href="https://outlook.live.com/mail/0/deeplink/compose?to=pedruuu291@gmail.com" class="outlook"
+                        target="_blank"><i class="fab fa-microsoft"></i></a>
+                    <a href="https://compose.mail.yahoo.com/?to=pedruuu291@gmail.com" class="yahoo" target="_blank"><i
+                            class="fab fa-yahoo"></i></a>
+                </div>
             </div>
         </div>
     </section>
+
+
 
     <section class="projects">
         <h2>Meus Projetos</h2>
@@ -66,7 +78,7 @@
                     <p>Minhas Vacinas é uma plataforma que promove a conscientização sobre a vacinação, permitindo que
                         os usuários gerenciem seu histórico de vacinas e acessem informações atualizadas. Utilizando
                         PHP, MySQL e Bootstrap, oferecemos uma aplicação responsiva e intuitiva.<br> <a
-                            href="https://vacinas.agenci.one" target="_blank">Saiba mais sobre o projeto
+                            href="https://minhasvacinas.online" target="_blank">Saiba mais sobre o projeto
                             aqui</a>.</p>
                 </div>
             </div>
