--- a/meus-links/index.html
+++ b/meus-links/index.html
@@ -30,7 +30,7 @@
     <main>
         <div class="container">
             <section class="container pageTop">
-                <img src="img/img.png" alt="Logo">
+                <img src="img/eu-cortado.png" alt="Logo">
 
                 <h1>Pedro</h1>
                 <p>Bem-vindo ao! Aqui você encontra todos os links para meus projetos, redes sociais e
@@ -54,9 +54,9 @@
                 <div class="card">
                     <div class="card-body">
                         <i class="bi bi-link" style="font-size: 32px; color: #00abf0;"></i>
-                        <a href="https://vacinas.agenci.one" target="_blank" class="card-text">Minhas Vacinas</a>
+                        <a href="https://www.minhasvacinas.online" target="_blank" class="card-text">Minhas Vacinas</a>
                         <button type="button" class="btn btn-outline-success copyButton"
-                            data-url-midia="https://vacinas.agenci.one">Copiar link</button>
+                            data-url-midia="https://www.minhasvacinas.online">Copiar link</button>
                     </div>
                 </div>
 
@@ -84,9 +84,10 @@
                 <div class="card">
                     <div class="card-body">
                         <i class="bi bi-steam" style="font-size: 32px; color: #00CFFF;"></i>
-                        <a href="https://steamcommunity.com/id/fazpix/" target="_blank" class="card-text">Steam</a>
+                        <a href="https://steamcommunity.com/profiles/76561199392297483/" target="_blank"
+                            class="card-text">Steam</a>
                         <button type="button" class="btn btn-outline-success copyButton"
-                            data-url-midia="https://steamcommunity.com/id/fazpix/">Copiar link</button>
+                            data-url-midia="https://steamcommunity.com/profiles/76561199392297483/">Copiar link</button>
                     </div>
                 </div>
 
@@ -116,7 +117,7 @@
 
     <footer>
         <div class="container">
-            <a href="https://github.com/psilvagg/Portifolio" target="_blank" class="btn btn-outline-secondary">
+            <a href="https://github.com/psilvagg/psilvagg" target="_blank" class="btn btn-outline-secondary">
                 <i class="bi bi-github iconGithub"></i> Github - Portifólio
             </a>
         </div>
